# ADS_SoSe_2023

uebung_1/: CMakeLists.txt  TEST  a.out  main.cpp
uebung_1/header_files/: Aufgaben.hpp  Deque.hpp  DoubleStack.hpp  ListD.hpp  ListE.hpp  NodeD.hpp  NodeE.hpp
uebung_1/implementation_files/: Aufgabe_1_TESTS.cpp  Aufgabe_2.cpp  Aufgabe_3.cpp  Aufgabe_4.cpp  Aufgabe_5.cpp  Aufgabe_6.cpp  Deque.cpp  DoubleStack.cpp  ListD.cpp  ListE.cpp
uebung_2/: CMakeLists.txt  main.cpp
uebung_2/Aufgabe_2/: Aufgabe_2.cpp  Aufgabe_2.hpp
uebung_3/: CMakeLists.txt  main.cpp
uebung_3/Aufgabe_1/: Aufgabe_1.txt
uebung_3/Aufgabe_2/: Aufgabe_2.txt
uebung_3/Aufgabe_3/: Aufgabe_3.txt
uebung_3/Aufgabe_4/: Aufgabe_4.txt
uebung_3/Aufgabe_5/header_files/: BinarySearchTree.hpp  TreeNode.hpp
uebung_3/Aufgabe_5/implementation_files/: BinarySearchTree.cpp
uebung_3/Aufgabe_6/: Aufgabe_6.txt
uebung_3/Aufgabe_7/: Aufgabe_7.txt
uebung_4/: CMakeLists.txt  main.cpp
