cmake_minimum_required(VERSION 3.24)
project(uebung_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(uebung_1 main.cpp implementation_files/ListE.cpp implementation_files/ListD.cpp implementation_files/Aufgabe_1_TESTS.cpp implementation_files/Aufgabe_2.cpp implementation_files/Deque.cpp implementation_files/Aufgabe_4.cpp implementation_files/Aufgabe_3.cpp implementation_files/DoubleStack.cpp implementation_files/Aufgabe_5.cpp implementation_files/Aufgabe_6.cpp)